@@ -1,5 +1,9 @@
 1.4.2 beta
 ===========
+(Robert Tansley)
+- Fixes to QueryArgs and RegisterServlet that cause NullPointerExceptions on
+  invalid input
+
 (Andrea Bollini)
 - SF Patch #1528142 Malformed OAI-PMH response: illegal bytes in UTF-8 for SF Bug #1490162
 
